--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -184,9 +184,22 @@ img {
     width: 100%;
     object-fit: contain;
 }
-.form-control{
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
     border-radius: 2rem;
     transition: .3s;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .form-group span{
     font-weight: bold;
@@ -392,4 +405,26 @@ body:not(.menu-icon) #subNavMenuUsuario{
 }
 .space-2{
     letter-spacing: 2px;
+}
+.btn-block{
+    display: block;
+    width: 100%;
+}
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
