--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -106,6 +106,7 @@
     --color-dark: #212529;
     --color-light: #fff;
     --color-border: #aaa;
+    --color-border-lighter: #aaa7;
     --color-text-light: #6c757d;
 }
 
@@ -144,6 +145,7 @@ h5 {
     top: 2rem;
     right: 2rem;
     z-index: 999999;
+    padding: .6rem 3rem .6rem 1rem;
 }
 
 .logo {
@@ -178,6 +180,7 @@ h5 {
     border-radius: 4px;
 }
 
+#main-menu>li:not(.active)>a:focus,
 #main-menu>li:not(.active)>a:hover {
     border-left: 4px solid var(--color-secondary);
 }
@@ -188,8 +191,10 @@ h5 {
     border-radius: 8px;
 }
 
+
 #main-menu li.active a i,
 #main-menu li a:hover span,
+#main-menu li a:focus span,
 #main-menu li.active a span {
     color: var(--color-light) !important;
 }
@@ -277,7 +282,15 @@ body:not(.menu-icon) #subNavMenuUsuario {
     padding: 0.3rem !important;
     border-radius: 4px;
 }
-
+.close[data-dismiss="alert"]{
+    position: absolute;
+    top: 0;
+    right: 0.5rem;
+    border: none;
+    background: none;
+    color: var(--color-light);
+    font-size: 1.5rem;
+}
 
 div.dataTables_wrapper .form-control {
     border: 1px solid #ccc;
@@ -287,6 +300,18 @@ div.dataTables_wrapper .form-control {
 .dataTables_length * {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
+}
+.offcanvas-header{
+    flex-direction: column;
+    align-items: normal;
+    padding-bottom: 0;
+}
+.offcanvas-body{
+    padding-top: 0;
+}
+button[data-bs-dismiss="offcanvas"]{
+    position: absolute;
+    right: 1rem;
 }
 
 @media (max-width:991px) {
@@ -300,7 +325,7 @@ div.dataTables_wrapper .form-control {
 table.dataTable thead,
 table.dataTable tbody {
     vertical-align: middle;
-    border: 1px solid #aaa7 !important;
+    border: 1px solid var(--color-border-lighter) !important;
     border-collapse: collapse !important;
     padding: .75rem !important;
 }
@@ -311,7 +336,6 @@ table.dataTable td {
 }
 
 table.dataTable {
-    /* border: none; */
     border-collapse: collapse !important;
 }
 
@@ -330,27 +354,148 @@ textarea.form-control {
 .ml-0 {
     margin-left: 0rem !important;
 }
-
 .ml-1 {
     margin-left: .25rem !important;
 }
-
 .ml-2 {
     margin-left: .5rem !important;
 }
-
 .ml-3 {
     margin-left: 1rem !important;
 }
-
 .ml-4 {
     margin-left: 1.5rem !important;
 }
-
 .ml-5 {
     margin-left: 2rem !important;
 }
+.mr-0 {
+    margin-right: 0rem !important;
+}
+.mr-1 {
+    margin-right: .25rem !important;
+}
+.mr-2 {
+    margin-right: .5rem !important;
+}
+.mr-3 {
+    margin-right: 1rem !important;
+}
+.mr-4 {
+    margin-right: 1.5rem !important;
+}
+.mr-5 {
+    margin-right: 2rem !important;
+}
 
+.mt-0 {
+    margin-top: 0rem !important;
+}
+.mt-1 {
+    margin-top: .25rem !important;
+}
+.mt-2 {
+    margin-top: .5rem !important;
+}
+.mt-3 {
+    margin-top: 1rem !important;
+}
+.mt-4 {
+    margin-top: 1.5rem !important;
+}
+.mt-5 {
+    margin-top: 2rem !important;
+}
+.mb-0 {
+    margin-bottom: 0rem !important;
+}
+.mb-1 {
+    margin-bottom: .25rem !important;
+}
+.mb-2 {
+    margin-bottom: .5rem !important;
+}
+.mb-3 {
+    margin-bottom: 1rem !important;
+}
+.mb-4 {
+    margin-bottom: 1.5rem !important;
+}
+.mb-5 {
+    margin-bottom: 2rem !important;
+}
+.pl-0 {
+    margin-left: 0rem !important;
+}
+.pl-1 {
+    margin-left: .25rem !important;
+}
+.pl-2 {
+    margin-left: .5rem !important;
+}
+.pl-3 {
+    margin-left: 1rem !important;
+}
+.pl-4 {
+    margin-left: 1.5rem !important;
+}
+.pl-5 {
+    margin-left: 2rem !important;
+}
+.pr-0 {
+    margin-right: 0rem !important;
+}
+.pr-1 {
+    margin-right: .25rem !important;
+}
+.pr-2 {
+    margin-right: .5rem !important;
+}
+.pr-3 {
+    margin-right: 1rem !important;
+}
+.pr-4 {
+    margin-right: 1.5rem !important;
+}
+.pr-5 {
+    margin-right: 2rem !important;
+}
+.pt-0 {
+    margin-top: 0rem !important;
+}
+.pt-1 {
+    margin-top: .25rem !important;
+}
+.pt-2 {
+    margin-top: .5rem !important;
+}
+.pt-3 {
+    margin-top: 1rem !important;
+}
+.pt-4 {
+    margin-top: 1.5rem !important;
+}
+.pt-5 {
+    margin-top: 2rem !important;
+}
+.pb-0 {
+    margin-bottom: 0rem !important;
+}
+.pb-1 {
+    margin-bottom: .25rem !important;
+}
+.pb-2 {
+    margin-bottom: .5rem !important;
+}
+.pb-3 {
+    margin-bottom: 1rem !important;
+}
+.pb-4 {
+    margin-bottom: 1.5rem !important;
+}
+.pb-5 {
+    margin-bottom: 2rem !important;
+}
 .text-primary {
     color: var(--color-primary) !important;
 }
@@ -478,10 +623,14 @@ textarea.form-control {
     color: var(--color-tertiary);
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--color-border-lighter);
     border-radius: 4px;
     transition: .3s;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+.form-control:focus-within,
+.form-control:focus{
+    border-color: var(--color-primary)!important;
 }
 
 .btn-block {
@@ -492,7 +641,7 @@ textarea.form-control {
 .btn {
     display: inline-block;
     font-weight: 400;
-    color: #212529;
+    color: var(--color-light);
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -508,37 +657,50 @@ textarea.form-control {
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.btn-primary:hover,
+.btn-primary:focus,
 .btn-primary {
     background: var(--color-primary);
     border-color: var(--color-primary);
 }
 
+.btn-secondary:hover,
+.btn-secondary:focus,
 .btn-secondary {
     background: var(--color-secondary);
     border-color: var(--color-secondary);
 }
 
+.btn-tertiary:hover,
+.btn-tertiary:focus,
 .btn-tertiary {
     background: var(--color-tertiary);
     border-color: var(--color-tertiary);
 }
 
+.btn-success:hover,
+.btn-success:focus,
 .btn-success {
-    color: var(--color-light);
     background: var(--color-success);
     border-color: var(--color-success);
 }
 
+.btn-warning:hover,
+.btn-warning:focus,
 .btn-warning {
     background: var(--color-warning);
     border-color: var(--color-warning);
 }
 
+.btn-danger:hover,
+.btn-danger:focus,
 .btn-danger {
     background: var(--color-danger);
     border-color: var(--color-danger);
 }
 
+.btn-info:hover,
+.btn-info:focus,
 .btn-info {
     background: var(--color-info);
     border-color: var(--color-info);
