--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -112,22 +112,52 @@
 
 *:not(i) {
     /* font-family: 'montserrat_alt'; */
-    font-family: 'montserrat';
-}
-th,h1,h2,h3,h4,h5,h6,label{
-    font-family: 'montserrat_alt';
-}
-
-.container-fluid {
-    flex-grow: 1;
+    font-family: 'mukta';
 }
 
 .breadcrumb-item,
 .navbar *:not(i),
 .sidebar *:not(i) {
-    /* font-family: 'mukta';
-    letter-spacing: 1px; */
-    font-family: 'montserrat';
+    /* font-family: 'mukta'; */
+    letter-spacing: 1px;
+    /* font-family: 'montserrat'; */
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+::-webkit-scrollbar-track {
+    background: var(--color-border-lighter);
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--color-text-light);
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-border);
+}
+
+/* th::first-letter,
+h1::first-letter,
+h2::first-letter,
+h3::first-letter,
+h4::first-letter,
+h5::first-letter,
+h6::first-letter,
+label::first-letter{
+    font-family: 'cinzelDecor';
+    text-transform: capitalize;
+}
+h1,h2,h3,h4,h5,h6,
+th,label{
+    font-family: 'mukta';
+    text-transform: lowercase;
+} */
+
+.container-fluid {
+    flex-grow: 1;
 }
 
 .breadcrumb-item a {
@@ -195,7 +225,6 @@ h5 {
     border-left: 5px solid var(--color-secondary);
     border-radius: 8px;
 }
-
 
 #main-menu li.active a i,
 #main-menu li a:hover span,
@@ -287,7 +316,8 @@ body:not(.menu-icon) #subNavMenuUsuario {
     padding: 0.3rem !important;
     border-radius: 4px;
 }
-.close[data-dismiss="alert"]{
+
+.close[data-dismiss="alert"] {
     position: absolute;
     top: 0;
     right: 0.5rem;
@@ -302,21 +332,24 @@ div.dataTables_wrapper .form-control {
     color: #777;
 }
 
-.offcanvas-header{
+.offcanvas-header {
     flex-direction: column;
     align-items: normal;
     padding-bottom: 0;
 }
-.offcanvas-body{
+
+.offcanvas-body {
     padding-top: 0;
 }
-.offcanvas-loading{
+
+.offcanvas-loading {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
-button[data-bs-dismiss="offcanvas"]{
+
+button[data-bs-dismiss="offcanvas"] {
     position: absolute;
     right: 1rem;
 }
@@ -328,7 +361,8 @@ button[data-bs-dismiss="offcanvas"]{
         text-align: center;
     }
 }
-.col-md-6{
+
+.col-md-6 {
     max-width: 50%;
 }
 
@@ -364,36 +398,47 @@ textarea.form-control {
 .ml-0 {
     margin-left: 0rem !important;
 }
+
 .ml-1 {
     margin-left: .25rem !important;
 }
+
 .ml-2 {
     margin-left: .5rem !important;
 }
+
 .ml-3 {
     margin-left: 1rem !important;
 }
+
 .ml-4 {
     margin-left: 1.5rem !important;
 }
+
 .ml-5 {
     margin-left: 2rem !important;
 }
+
 .mr-0 {
     margin-right: 0rem !important;
 }
+
 .mr-1 {
     margin-right: .25rem !important;
 }
+
 .mr-2 {
     margin-right: .5rem !important;
 }
+
 .mr-3 {
     margin-right: 1rem !important;
 }
+
 .mr-4 {
     margin-right: 1.5rem !important;
 }
+
 .mr-5 {
     margin-right: 2rem !important;
 }
@@ -401,111 +446,147 @@ textarea.form-control {
 .mt-0 {
     margin-top: 0rem !important;
 }
+
 .mt-1 {
     margin-top: .25rem !important;
 }
+
 .mt-2 {
     margin-top: .5rem !important;
 }
+
 .mt-3 {
     margin-top: 1rem !important;
 }
+
 .mt-4 {
     margin-top: 1.5rem !important;
 }
+
 .mt-5 {
     margin-top: 2rem !important;
 }
+
 .mb-0 {
     margin-bottom: 0rem !important;
 }
+
 .mb-1 {
     margin-bottom: .25rem !important;
 }
+
 .mb-2 {
     margin-bottom: .5rem !important;
 }
+
 .mb-3 {
     margin-bottom: 1rem !important;
 }
+
 .mb-4 {
     margin-bottom: 1.5rem !important;
 }
+
 .mb-5 {
     margin-bottom: 2rem !important;
 }
+
 .pl-0 {
     padding-left: 0rem !important;
 }
+
 .pl-1 {
     padding-left: .25rem !important;
 }
+
 .pl-2 {
     padding-left: .5rem !important;
 }
+
 .pl-3 {
     padding-left: 1rem !important;
 }
+
 .pl-4 {
     padding-left: 1.5rem !important;
 }
+
 .pl-5 {
     padding-left: 2rem !important;
 }
+
 .pr-0 {
     padding-right: 0rem !important;
 }
+
 .pr-1 {
     padding-right: .25rem !important;
 }
+
 .pr-2 {
     padding-right: .5rem !important;
 }
+
 .pr-3 {
     padding-right: 1rem !important;
 }
+
 .pr-4 {
     padding-right: 1.5rem !important;
 }
+
 .pr-5 {
     padding-right: 2rem !important;
 }
+
 .pt-0 {
     padding-top: 0rem !important;
 }
+
 .pt-1 {
     padding-top: .25rem !important;
 }
+
 .pt-2 {
     padding-top: .5rem !important;
 }
+
 .pt-3 {
     padding-top: 1rem !important;
 }
+
 .pt-4 {
     padding-top: 1.5rem !important;
 }
+
 .pt-5 {
     padding-top: 2rem !important;
 }
+
 .pb-0 {
     padding-bottom: 0rem !important;
 }
+
 .pb-1 {
     padding-bottom: .25rem !important;
 }
+
 .pb-2 {
     padding-bottom: .5rem !important;
 }
+
 .pb-3 {
     padding-bottom: 1rem !important;
 }
+
 .pb-4 {
     padding-bottom: 1.5rem !important;
 }
+
 .pb-5 {
     padding-bottom: 2rem !important;
 }
+
 .text-primary {
     color: var(--color-primary) !important;
 }
@@ -638,9 +719,10 @@ textarea.form-control {
     transition: .3s;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+
 .form-control:focus-within,
-.form-control:focus{
-    border-color: var(--color-primary)!important;
+.form-control:focus {
+    border-color: var(--color-primary) !important;
 }
 
 .btn-block {
@@ -716,9 +798,10 @@ textarea.form-control {
 }
 
 .btn-info:hover,
-.btn-outline-info:hover{
+.btn-outline-info:hover {
     color: var(--color-light);
 }
+
 .btn-outline-info:hover,
 .btn-info:hover,
 .btn-info:focus,
@@ -751,14 +834,17 @@ textarea.form-control {
     color: var(--color-success);
     border-color: var(--color-success);
 }
+
 .btn-outline-warning {
     color: var(--color-warning);
     border-color: var(--color-warning);
 }
+
 .btn-outline-danger {
     color: var(--color-danger);
     border-color: var(--color-danger);
 }
+
 .btn-outline-info {
     color: var(--color-info);
     border-color: var(--color-info);
