--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -129,11 +129,15 @@
 }
 ::-webkit-scrollbar-track {
     background: var(--color-border-lighter);
-    border-radius: 4px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    /* border-radius: 4px; */
 }
 ::-webkit-scrollbar-thumb {
     background: var(--color-text-light);
-    border-radius: 4px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    /* border-radius: 4px; */
 }
 ::-webkit-scrollbar-thumb:hover {
     background: var(--color-border);
