--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4024,7 +4024,7 @@ footer {
 @media screen and (max-width: 1200px) {
     #main-content {
         width: 100%;
-        padding: 0
+        /* padding: 0 */
     }
 }
 
