--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -122,6 +122,9 @@ body{
 .cardRight{
     padding-top: 2rem;
 }
+.cardcardRightLeft h4{
+    letter-spacing: 1px;
+}
 .divisor{
     border-left: 1px solid var(--color-tertiary);
     margin: 2rem 0;
