--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5163,7 +5163,7 @@ label {
 .fancy-checkbox input[type="checkbox"]+span {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
+    vertical-align: auto;
     zoom: 1;
     display: inline;
     cursor: pointer;
@@ -5173,9 +5173,9 @@ label {
 .fancy-checkbox input[type="checkbox"]+span:before {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     border-radius: .1875rem;
     position: relative;
     bottom: 1px;
@@ -5228,9 +5228,9 @@ label {
 .fancy-radio input[type="radio"]+span i {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
@@ -5321,9 +5321,9 @@ label {
 .multiselect-custom+.btn-group ul.multiselect-container>li>a label.checkbox:before {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     position: relative;
     bottom: 1px;
     content: "";
@@ -5369,9 +5369,9 @@ label {
 .multiselect-custom+.btn-group ul.multiselect-container>li>a label.radio:before {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
@@ -5780,9 +5780,9 @@ select.form-control:not([size]):not([multiple]) {
 .separator-linethrough span {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     background-color: #fff;
     font-size: 18px;
     padding: 0 10px;
@@ -6203,9 +6203,9 @@ select.form-control:not([size]):not([multiple]) {
 .panel-group .panel .panel-title>a.collapsed .icon-collapsed {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     vertical-align: baseline
 }
 
@@ -6612,9 +6612,9 @@ select.form-control:not([size]):not([multiple]) {
 .ct-legend li {
     display: inline-block;
     vertical-align: middle;
-    *vertical-align: auto;
-    *zoom: 1;
-    *display: inline;
+    vertical-align: auto;
+    zoom: 1;
+    display: inline;
     position: relative;
     margin-bottom: 3px;
     list-style-type: none
