--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -111,16 +111,16 @@ body{
     color: var(--color-tertiary);
 }
 .cardLeft h5{
-    font-size: .9rem;
+    font-size: .8rem;
     letter-spacing: 1px;
 }
 .cardLeft h4{
     letter-spacing: 1px;
     margin: 10px 0 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .cardRight{
-    padding-top: 2rem;
+    padding-top: .5rem;
 }
 .cardcardRightLeft h4{
     letter-spacing: 1px;
@@ -223,13 +223,17 @@ img {
 }
 
 .imageArea{
-    min-width: 10rem;
-    max-width: 12rem;
+    min-width: 4rem;
+    max-width: 4rem;
 }
 #footer{
     position: fixed;
     bottom: 10px;
     right: 10px;
+}
+
+.cardRight h4{
+    display: none;
 }
 
 @media (max-width: 380px){
@@ -270,7 +274,7 @@ img {
         min-width: 40%!important;
     }
     .imageArea{
-        max-width: 10rem!important;
+        max-width: 4rem!important;
     }
     .ph-fix .cardRight{
         padding-top: 0;
