--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4948,11 +4948,13 @@ html.fullscreen-bg #wrapper {
 }
 
 .sidebar .metismenu ul li:first-child a {
-    border-top-left-radius: 6px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .sidebar .metismenu ul li:last-child a {
-    border-bottom-left-radius: 6px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 /*body:not(.menu-icon) .sidebar .metismenu ul a::before {
