--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -383,6 +383,15 @@ div.dataTables_wrapper .form-control {
     justify-content: center;
 }
 
+a[data-bs-toggle='offcanvas'],
+a[data-bs-toggle='modal']{
+    cursor:pointer;
+}  
+.form-description{
+    height: unset!important;
+    min-height: calc(1.5em + 0.75rem + 2px);
+}
+
 button[data-bs-dismiss="offcanvas"] {
     position: absolute;
     right: 1rem;
